[gd_scene load_steps=11 format=3 uid="uid://c21y7tyipvd0n"]

[ext_resource type="Script" uid="uid://8vtli88kljei" path="res://src/entity/pursuer.gd" id="1_pi1dw"]
[ext_resource type="Texture2D" uid="uid://cpqfdlto34l6s" path="res://images/entity/pursuer.png" id="2_u3ohh"]
[ext_resource type="Script" uid="uid://dqg5sl3316gba" path="res://src/class/hazard.gd" id="3_brq5u"]
[ext_resource type="AudioStream" uid="uid://ri17qlm6vjff" path="res://sfx/pursuer.wav" id="3_duby1"]
[ext_resource type="Script" uid="uid://baw7jrp64qlgb" path="res://src/component/knockback_component.gd" id="4_brq5u"]
[ext_resource type="Script" uid="uid://b3htw0ehvw1xh" path="res://src/component/movement_component.gd" id="5_kc8mu"]
[ext_resource type="PackedScene" uid="uid://bbjj55nvus0cp" path="res://prefab/entity/level/music_muter.tscn" id="7_brq5u"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4otk1"]
radius = 0.6
height = 4.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_yi0pw"]
radius = 1.0
height = 4.2

[sub_resource type="SphereShape3D" id="SphereShape3D_kc8mu"]
radius = 12.0

[node name="Pursuer" type="CharacterBody3D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_pi1dw")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
layers = 2
cast_shadow = 0
pixel_size = 0.03
billboard = 1
no_depth_test = true
texture_filter = 0
texture = ExtResource("2_u3ohh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CapsuleShape3D_4otk1")
disabled = true

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 7
collision_mask = 7
script = ExtResource("3_brq5u")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.363715, 0)
shape = SubResource("CapsuleShape3D_yi0pw")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
light_color = Color(1, 0, 0.9168, 1)
light_energy = 5.0
light_volumetric_fog_energy = 0.75
shadow_enabled = true
omni_range = 6.0
omni_attenuation = 2.0

[node name="Ambience" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
stream = ExtResource("3_duby1")
unit_size = 12.0
max_db = 1.0
autoplay = true
max_distance = 30.0
bus = &"Ambient"

[node name="KnockbackComponent" type="Node" parent="." node_paths=PackedStringArray("movement_component")]
script = ExtResource("4_brq5u")
movement_component = NodePath("../MovementComponent")
metadata/_custom_type_script = "uid://baw7jrp64qlgb"

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("5_kc8mu")
air_friction = 0.1
fall_speed = 0.0
jump_speed = 0.0
metadata/_custom_type_script = "uid://b3htw0ehvw1xh"

[node name="MusicMuter" parent="." instance=ExtResource("7_brq5u")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MusicMuter"]
shape = SubResource("SphereShape3D_kc8mu")

[connection signal="area_entered" from="Area3D" to="." method="area_3d_area_entered"]
[connection signal="body_entered" from="Area3D" to="." method="area_3d_body_entered"]
